adding routes adjusted crime routes
