# server/routes/stations.py
@@ -1,28 +1,24 @@
 from flask import request, abort, jsonify
 from server.models import db
+from server.utils import five_closest_stations, stations_within_half_mile
 from sqlalchemy.sql import text
 
 def nearby_stations():
     lat = request.args.get('latitude')
     lon = request.args.get('longitude')
-    limit = request.args.get('limit', 5)
+    
+    five_closest = five_closest_stations(lat, lon)
+    half_mile = stations_within_half_mile(lat, lon)
 
-    with db.connect() as conn:
-        query = text(
-            '''
-            select * from (select name, line, latitude, longitude, acos( sin( radians(:lat) ) * sin( radians(latitude) ) + cos( radians(:lat) ) * cos( radians(latitude) ) * cos( radians(:lon - longitude) ) ) * 6371 as distance from stations) as t1
-            where distance < 0.402336 limit :limit
-            '''
-        )
-        stations = conn.execute(query, lat=lat, lon=lon, limit=limit)
+    stations = half_mile if len(half_mile) > len(five_closest) else five_closest 
 
     return jsonify([
         {
-            "name": station[0],
-            "lines": station[1],
-            "latitude": station[2],
-            "longitude": station[3]
-
+            "id": station[0],
+            "name": station[1],
+            "lines": station[2].split('-'),
+            "latitude": station[3],
+            "longitude": station[4]
         }
         for station in stations
     ])
